--- a/tooling/intellij/src/main/java/org/stratos/lang/module/sdk/StratosSdkPanel.form
+++ b/tooling/intellij/src/main/java/org/stratos/lang/module/sdk/StratosSdkPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="lang.stratos.module.sdk.StratosSdkPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.stratos.lang.module.sdk.StratosSdkPanel">
   <grid id="27dc6" binding="myRoot" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="5" bottom="0" right="5"/>
     <constraints>
